# agri-pulse

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: activities.py  crops.py  plantings.py  varieties.py
backend/app/scrapers/: base.py  wikipedia_apple.py  wikipedia_blueberries.py  wikipedia_citrus.py  wikipedia_cucumber.py  wikipedia_grapes.py  wikipedia_herbs.py  wikipedia_mushrooms.py  wikipedia_pepper.py  wikipedia_potato.py  wikipedia_strawberry.py  wikipedia_tomato.py
backend/tests/: conftest.py  test_api.py  test_crops.py  test_models.py
docs/progress/: 01-infrastructure.md  02-core-api.md  03-frontend-dashboard.md  04-roadmap.md  README.md
docs/superpowers/plans/: 2024-05-24-fastapi-core-varieties-api.md  2025-02-14-project-scaffolding-docker-setup.md  2025-05-14-varieties-api.md  2025-05-15-agri-pulse-cleanup.md  2025-05-16-milestone-02-core-api.md  2026-06-03-crops-api-implementation.md  2026-06-03-frontend-dashboard-foundation.md  2026-06-03-progress-tracker-implementation.md
docs/superpowers/specs/: 2026-06-03-crops-api-design.md  2026-06-03-frontend-dashboard-foundation.md  2026-06-03-progress-tracker-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  (+2 more)
(+18 files in other folders)
