[project]
name = "agri-pulse-backend"
version = "0.1.0"
description = "High-performance agricultural intelligence platform backend"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.6",
    "alembic>=1.11.0",
    "pydantic-settings>=2.0.0",
    "scrapling>=0.4.8",
    "playwright>=1.60.0",
    "curl-cffi>=0.15.0",
    "browserforge>=1.2.4",
    "python-multipart>=0.0.31",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
